<?xml version="1.0"?>
<package format="2">
  <name>media_manager</name>
  <version>0.0.0</version>
  <description>The media_manager package</description>

  <maintainer email="roscore@kakao.com">roscore</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>gstreamer-1.0</depend>

  <export>
  </export>

</package>
